--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <img id="logo" src="Static/Calypso_Logo.png">
     <div class="fields">
       <input id="description" placeholder="Description">
+      <input id="tags" placeholder="Tags (seperated by spaces)">
       <textarea readonly id="output"></textarea>
       <button id="generate">Generate</button>
     </div>
